# edh-learning

./: .gitleaks.toml  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: 00-getting-started.ipynb  10-use-case-era5-small-area.ipynb  20-use-case-cmip6-rome.ipynb  50-use-case-sentinel-1-small-area.ipynb  60-best-practice-local-cache-era5-small-area.ipynb
