[project]
name = "edh-notebooks"
version = "0.1.0"
description = "Earth Data Hub example notebooks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "aiohttp-client-cache[filesystem,sqlite]>=0.14.3",
    "cftime>=1.6.5",
    "dask>=2025.7.0",
    "geoviews>=1.15.1",
    "jupyterlab>=4.4.6",
    "jupyterlab-execute-time>=3.2.0",
    "matplotlib>=3.10.6",
    "rioxarray>=0.19.0",
    "xarray>=2025.8.0",
    "zarr>=3.1.2",
]

[project.optional-dependencies]
maps = [
    "cartopy>=0.25.0",
    "datashader>=0.18.2",
    "hvplot>=0.12.2",
]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "pre-commit>=4.3.0",
    "ruff>=0.14.14",
]
